quickly fix a oops on IE8

--- a/less/variables-ef.less
+++ b/less/variables-ef.less
@@ -385,7 +385,8 @@
 // Tooltips and popovers
 // -------------------------
 @tooltip-color:               #fff;
-@tooltip-bg:                  rgba(0,0,0,.9);
+@tooltip-bg:                  #000;
+@tooltip-opacity:             .9;
 @tooltip-arrow-width:         5px;
 @tooltip-arrow-color:         @tooltip-bg;
 
